--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <a href="#" class="text-2xl text-gray-600 block">جدیدترین دوره‌ها</a>
                     <a href="#" class="text-2xl text-gray-600 block">مشاهده همه دوره‌ها</a>
                 </div>
-                <div class="flex justify-between">
+                <div class="flex flex-wrap justify-center">
                     <a href="#" class="bg-white mt-6 mx-2 rounded-lg relative" style="height: 450px; width: 288px;">
                         <div class="product-list">
                             <div class="m-3 align-justify">
@@ -217,12 +217,12 @@
 
                     </div>
                 </div>
-                <div class="flex mt-10">
-                    <div class="w-1/3 pl-6 text-justify description">
+                <div class="flex flex-wrap justify-center mt-10">
+                    <div class="lg:w-1/3 mt-4 pl-6 text-justify description">
                         <h3 class="mb-3">درباره فروش فايل</h3>
                         <span>فروش فايل یکی از پرتلاش‌ترین و بروزترین وبسایت های آموزشی در سطح ایران است که همیشه تلاش کرده تا بتواند جدیدترین و بروزترین مقالات و دوره‌های آموزشی را در اختیار علاقه‌مندان ایرانی قرار دهد. تبدیل کردن برنامه نویسان ایرانی به بهترین برنامه نویسان جهان هدف ماست.</span>
                     </div>
-                    <div class="w-1/3 pr-5 description">
+                    <div class="lg:w-1/3 mt-4 pr-5 description">
                         <div class="mx-15">
                             <h3 class="mb-3">بخش های سايت</h3>
                             <ul>
@@ -233,7 +233,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="w-1/3 description">
+                    <div class="lg:w-1/3 mt-4 description">
                         <div class="">
                             <h3 class="mb-3">ارتباط با من</h3>
                             <div class="flex justify-between mb-3">
