--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </html>
 <body>
 <div id="app">
-    <div>
+    <header>
         <div class="flex custom-container my-3">
             <ul class="header-ul">
                 <li><a class="pl-4" href="#">کانال شاد</a></li>
@@ -44,12 +44,13 @@
                 </div>
             </div>
         </div>
-    </div>
+    </header>
+
     <div>
         <section class="bg-gray-600 text-white">
             <div class="banner custom-container flex flex-wrap py-12 items-center justify-center">
                 <div class="r-banner basis-1/2 ">
-                    <a href="#" class="bg-gray-700 flex w-fit rounded-full px-4 py-2">
+                    <a href="/laravel.html" class="bg-gray-700 flex w-fit rounded-full px-4 py-2">
                         شروع یادگیری برنامه‌نویسی
                         <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 12h-15m0 0l6.75 6.75M4.5 12l6.75-6.75" />
@@ -74,7 +75,7 @@
                     <a href="#" class="text-2xl text-gray-600 block">مشاهده همه دوره‌ها</a>
                 </div>
                 <div class="flex flex-wrap justify-center">
-                    <a href="#" class="bg-white mt-6 mx-2 rounded-lg relative" style="height: 450px; width: 288px;">
+                    <a href="/laravel.html" class="bg-white mt-6 mx-2 rounded-lg relative" style="height: 450px; width: 288px;">
                         <div class="product-list">
                             <div class="m-3 align-justify">
                                 <div class="product_img_div">
@@ -99,14 +100,14 @@
                                             </div>
                                         </div>
                                         <div class="text-green-600 font-bold text-tiny flex items-center">
-                                            <span style="margin-right: 45px">300,000 تومان</span>
+                                            <span style="margin-right: 45px">100,000 تومان</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="bg-white mt-6 mx-2 rounded-lg relative" style="height: 450px; width: 288px;">
+                    <a href="/laravel.html" class="bg-white mt-6 mx-2 rounded-lg relative" style="height: 450px; width: 288px;">
                         <div class="product-list">
                             <div class="m-3 align-justify">
                                 <div class="product_img_div">
@@ -138,7 +139,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="bg-white mt-6 mx-2 rounded-lg relative" style="height: 450px; width: 288px;">
+                    <a href="/laravel.html" class="bg-white mt-6 mx-2 rounded-lg relative" style="height: 450px; width: 288px;">
                         <div class="product-list">
                             <div class="m-3 align-justify">
                                 <div class="product_img_div">
@@ -170,7 +171,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="#" class="bg-white mt-6 mx-2 rounded-lg relative" style="height: 450px; width: 288px;">
+                    <a href="/laravel.html" class="bg-white mt-6 mx-2 rounded-lg relative" style="height: 450px; width: 288px;">
                         <div class="product-list">
                             <div class="m-3 align-justify">
                                 <div class="product_img_div">
@@ -206,7 +207,8 @@
             </div>
         </section>
     </div>
-    <div class="footer">
+
+    <footer class="footer">
         <div class="content">
             <div class="custom-container my-10">
                 <div class="flex justify-between">
@@ -268,7 +270,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </footer>
 </div>
 </body>
 </html>
