--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="glass-card w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-white/30">
                     <!-- Placeholder for profile image -->
                     <div class="w-full h-full bg-gradient-to-br from-blue-100 to-purple-100 flex items-center justify-center">
-                        <i class="fas fa-user text-6xl text-blue-500"></i>
+                        <img src="https://avatars.githubusercontent.com/u/82977290">
                     </div>
                 </div>
             </div>
@@ -162,7 +162,7 @@
             </div>
             <div class="glass-card p-6 rounded-xl flex flex-col items-center">
                 <div class="w-16 h-16 mb-4 bg-yellow-100 rounded-full flex items-center justify-center">
-                    <i class="fas fa-database text-3xl text-yellow-500"></i>
+                    <i class="-database text-3xl text-yellow-500"></i>
                 </div>
                 <h3 class="font-bold mb-2">SQL</h3>
                 <div class="w-full bg-gray-200 rounded-full h-2">
@@ -205,7 +205,7 @@
             <!-- Project 1 -->
             <div class="glass-card p-8 rounded-xl">
                 <div class="w-full h-48 mb-6 bg-gradient-to-r from-blue-100 to-purple-100 rounded-lg flex items-center justify-center">
-                    <i class="fas fa-server text-5xl text-blue-500"></i>
+                    <i class="-server text-5xl text-blue-500"></i>
                 </div>
                 <h3 class="text-xl font-bold mb-3">Scalable API Service</h3>
                 <p class="text-gray-600 mb-4">A high-performance REST API built with Node.js and Express that handles millions of requests per day with minimal latency.</p>
@@ -215,14 +215,14 @@
                     <span class="text-xs px-3 py-1 bg-yellow-100 text-yellow-800 rounded-full">MongoDB</span>
                 </div>
                 <a href="https://github.com/M0einRahmani" target="_blank" class="text-blue-500 font-medium flex items-center">
-                    View on GitHub <i class="fas fa-arrow-right ml-2"></i>
+                    View on GitHub <i class="-arrow-right ml-2"></i>
                 </a>
             </div>
             
             <!-- Project 2 -->
             <div class="glass-card p-8 rounded-xl">
                 <div class="w-full h-48 mb-6 bg-gradient-to-r from-purple-100 to-pink-100 rounded-lg flex items-center justify-center">
-                    <i class="fas fa-robot text-5xl text-purple-500"></i>
+                    <i class="-robot text-5xl text-purple-500"></i>
                 </div>
                 <h3 class="text-xl font-bold mb-3">AI Microservice</h3>
                 <p class="text-gray-600 mb-4">A Python-based microservice that integrates machine learning models with a web application using FastAPI and Docker.</p>
@@ -232,7 +232,7 @@
                     <span class="text-xs px-3 py-1 bg-gray-100 text-gray-800 rounded-full">Docker</span>
                 </div>
                 <a href="https://github.com/M0einRahmani" target="_blank" class="text-blue-500 font-medium flex items-center">
-                    View on GitHub <i class="fas fa-arrow-right ml-2"></i>
+                    View on GitHub <i class="-arrow-right ml-2"></i>
                 </a>
             </div>
         </div>
@@ -255,7 +255,7 @@
                 <div class="space-y-4">
                     <div class="flex items-start space-x-4">
                         <div class="w-10 h-10 rounded-full bg-blue-100 flex items-center justify-center">
-                            <i class="fas fa-envelope text-blue-500"></i>
+                            <i class="-envelope text-blue-500"></i>
                         </div>
                         <div>
                             <h4 class="font-medium">Email</h4>
