--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="glass-card w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden border-4 border-white/30">
                     <!-- Placeholder for profile image -->
                     <div class="w-full h-full bg-gradient-to-br from-blue-100 to-purple-100 flex items-center justify-center">
-                        <img src="https://avatars.githubusercontent.com/u/82977290">
+                        <img src="https://avatars.githubusercontent.com/u/82977290" alt="Avatar">
                     </div>
                 </div>
             </div>
