--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
                 <div class="text-center md:text-left">
                     <h1 class="text-4xl md:text-6xl font-bold mb-4">Hi, I'm <span class="text-indigo-500">Moein Rahmani</span></h1>
-                    <div class="typewriter text-2xl md:text-3xl font-medium mb-6">
+                    <div class="typewriter text-2xl md:text-3xl font-medium mb-6 whitespace-normal">
                         Backend Developer | Laravel Expert
                     </div>
                     <p class="text-lg text-gray-300 mb-8 max-w-lg">
@@ -513,16 +513,16 @@
                     </div>
                     
                     <div class="mt-8 flex space-x-4">
-                        <a href="#" class="p-3 bg-indigo-500 bg-opacity-20 text-indigo-400 hover:bg-indigo-500 hover:text-white rounded-full transition duration-300">
+                        <a href="https://github.com/M0einRahmani" class="p-3 bg-indigo-500 bg-opacity-20 text-indigo-400 hover:bg-indigo-500 hover:text-white rounded-full transition duration-300">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="#" class="p-3 bg-indigo-500 bg-opacity-20 text-indigo-400 hover:bg-indigo-500 hover:text-white rounded-full transition duration-300">
+                        <a href="https://www.linkedin.com/in/moeinrahmani" class="p-3 bg-indigo-500 bg-opacity-20 text-indigo-400 hover:bg-indigo-500 hover:text-white rounded-full transition duration-300">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                        <a href="#" class="p-3 bg-indigo-500 bg-opacity-20 text-indigo-400 hover:bg-indigo-500 hover:text-white rounded-full transition duration-300">
+<!--                         <a href="#" class="p-3 bg-indigo-500 bg-opacity-20 text-indigo-400 hover:bg-indigo-500 hover:text-white rounded-full transition duration-300">
                             <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#" class="p-3 bg-indigo-500 bg-opacity-20 text-indigo-400 hover:bg-indigo-500 hover:text-white rounded-full transition duration-300">
+                        </a> -->
+                        <a href="https://t.me/m0einrahmani" class="p-3 bg-indigo-500 bg-opacity-20 text-indigo-400 hover:bg-indigo-500 hover:text-white rounded-full transition duration-300">
                             <i class="fab fa-telegram"></i>
                         </a>
                     </div>
