--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
                 <div class="text-center md:text-left">
                     <h1 class="text-4xl md:text-6xl font-bold mb-4">Hi, I'm <span class="text-indigo-500">Moein Rahmani</span></h1>
-                    <div class="typewriter text-lg md:text-3xl font-medium mb-6">
+                    <div class="typewriter text-lg md:text-3xl font-medium mb-6 w-fit pr-[5px]">
                         Backend Developer | Laravel Expert
                     </div>
                     <p class="text-lg text-gray-300 mb-8 max-w-lg">
