--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             <div>
                 <h3 class="text-2xl font-bold mb-4">Who am I?</h3>
                 <p class="text-gray-300 mb-6">
-                    I'm Moein Rahmani, a passionate backend developer specializing in Laravel, PHP, and modern JavaScript frameworks. With 5+ years of experience, I've helped numerous clients build robust, scalable web applications.
+                    I'm Moein Rahmani, a passionate backend developer specializing in Laravel, PHP, and modern JavaScript frameworks. With 6+ years of experience, I've helped numerous clients build robust, scalable web applications.
                 </p>
                 <p class="text-gray-300 mb-6">
                     My expertise lies in creating efficient server-side logic, designing and implementing databases, and ensuring high performance and responsiveness to requests from the front-end.
@@ -208,7 +208,7 @@
                     </div>
                     <div>
                         <p class="text-gray-400">Email:</p>
-                        <p class="font-medium">moein@example.com</p>
+                        <p class="font-medium">moeinrahmani951@gmail.com</p>
                     </div>
                     <div>
                         <p class="text-gray-400">From:</p>
@@ -216,7 +216,7 @@
                     </div>
                     <div>
                         <p class="text-gray-400">Experience:</p>
-                        <p class="font-medium">5+ Years</p>
+                        <p class="font-medium">6+ Years</p>
                     </div>
                 </div>
                 <a href="#" class="inline-flex items-center px-6 py-3 bg-indigo-600 hover:bg-indigo-700 rounded-md text-white font-medium transition duration-300">
@@ -439,7 +439,7 @@
             <!-- Project 3 -->
             <div class="project-card bg-gray-800 bg-opacity-80 rounded-xl overflow-hidden backdrop-blur-sm">
                 <div class="relative h-48 overflow-hidden">
-                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+                    <img src="https://media.istockphoto.com/id/1371325578/photo/kanban-project-management-software-on-laptop.webp?a=1&b=1&s=612x612&w=0&k=20&c=vA4hRxbaiOlLJdZGs52RGm7NiOzZJAFo1KuJPPwuyrU="
                          alt="Task Management"
                          class="w-full h-full object-cover transition duration-500 hover:scale-110">
                     <div class="absolute inset-0 bg-indigo-600 bg-opacity-70 flex items-center justify-center opacity-0 hover:opacity-100 transition duration-300">
