--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <p class="text-gray-300 mb-6">
                     My expertise lies in creating efficient server-side logic, designing and implementing databases, and ensuring high performance and responsiveness to requests from the front-end.
                 </p>
-                <div class="grid grid-cols-2 gap-4 mb-6">
+                <div class="grid md:grid-cols-2 gap-4 mb-6">
                     <div>
                         <p class="text-gray-400">Name:</p>
                         <p class="font-medium">Moein Rahmani</p>
